# ticket-selling-system

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
config/: db.conf
doc/: doxyCofig.conf
libs/qt/5.13.0/: INSTALL_RECEIPT.json
libs/qt/5.13.0/.brew/: qt.rb
libs/qt/5.13.0/Frameworks/: QtBodymovin.framework  QtMultimediaQuick.framework  QtPositioningQuick.framework  QtVirtualKeyboard.framework
libs/qt/5.13.0/include/: QtBodymovin  QtMultimediaQuick  QtPositioningQuick  QtQuickShapes  QtVirtualKeyboard
libs/qt/5.13.0/lib/: libQt5AccessibilitySupport.prl  libQt5Bootstrap.prl  libQt5ClipboardSupport.prl  libQt5DeviceDiscoverySupport.prl  libQt5EdidSupport.prl  libQt5EventDispatcherSupport.prl  libQt5FbSupport.prl  libQt5FontDatabaseSupport.prl  libQt5GraphicsSupport.prl  libQt5OpenGLExtensions.prl  libQt5PacketProtocol.prl  libQt5PlatformCompositorSupport.prl  libQt5QmlDebug.prl  libQt5QmlDevTools.prl  libQt5ServiceSupport.prl  libQt5ThemeSupport.prl  libQt5UiTools.prl  libqtfreetype.prl  libqtlibpng.prl
libs/qt/5.13.0/lib/Qt3DAnimation.framework/: Qt3DAnimation.prl
libs/qt/5.13.0/lib/Qt3DCore.framework/: Qt3DCore.prl
libs/qt/5.13.0/lib/Qt3DExtras.framework/: Qt3DExtras.prl
libs/qt/5.13.0/lib/Qt3DInput.framework/: Qt3DInput.prl
libs/qt/5.13.0/lib/Qt3DLogic.framework/: Qt3DLogic.prl
libs/qt/5.13.0/lib/Qt3DQuick.framework/: Qt3DQuick.prl
libs/qt/5.13.0/mkspecs/: qconfig.pri  qmodule.pri
src/: Apresentacao.cpp  Apresentacao.h  Dominios.cpp  Dominios.h  Entidades.cpp  Entidades.h  Servicos.cpp  Servicos.h  main.cpp
(+342 files in other folders)
